--- a/css/login.css
+++ b/css/login.css
@@ -26,8 +26,15 @@ body {
     backdrop-filter: saturate(180%) blur(7px);
 }
 p{
-    font-size:20px;
-    margin-bottom: 50px;
+    
     color: white;
     text-shadow: 1px 1px 1px #000000;
+}
+.info{
+    font-size:20px;
+    margin-bottom: 50px;
+}
+.status
+{
+    margin-top: 10px;
 }
