--- a/css/login.css
+++ b/css/login.css
@@ -19,7 +19,7 @@ body {
     align-items: center;
     flex-direction: column;
     justify-content: center;
-
+    border-radius: 15px;
     background: rgba(63, 183, 235, 0.589);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 2px 4px, rgba(0, 0, 0, 0.23) 0px 2px 4px;
     -webkit-backdrop-filter: saturate(180%) blur(7px);
@@ -37,4 +37,10 @@ p{
 .status
 {
     margin-top: 10px;
+}
+@media (max-width: 786px) {
+    .center{
+        height: 100%;
+        width: 100%;
+    }
 }
