--- a/css/chat_page.css
+++ b/css/chat_page.css
@@ -213,8 +213,8 @@ p{
     margin-bottom: 10px;
     padding: 10px;
     border-radius: 10px 10px 0px 0px;
-
     background: rgba(54, 54, 54, 0.1);
+    background-size: cover;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 2px 4px, rgba(0, 0, 0, 0.23) 0px 2px 4px;
     -webkit-backdrop-filter: saturate(180%) blur(7px);
     backdrop-filter: saturate(180%) blur(7px);
@@ -264,14 +264,15 @@ padding-bottom: 10px;
 .otherMsg {
     display: flex;
     padding-top: 10px;
+    margin-right: 30%;
 }
 
 .myMsg {
     display: flex;
     padding-top: 10px;
+    margin-left: 30%;
     align-self: flex-end;
     flex-direction: row-reverse;
-
 }
 
 .msgInfo {
