--- a/css/chat_page.css
+++ b/css/chat_page.css
@@ -26,9 +26,6 @@ p{
     block-size: 100px;
 
 }
-.header a:visited {
-    color: rgb(250, 250, 250);
-  }
 .logoutBtn {
     border: none;
     margin-right: 15px;
@@ -229,6 +226,7 @@ p{
     align-items: center;
     border-radius: 10px;
     padding-right: 10px;
+    max-width: 77%;
     transition: all 0.4s;
     cursor: pointer;
     font-weight:bold;
