--- a/css/chat_page.css
+++ b/css/chat_page.css
@@ -276,9 +276,7 @@ padding-bottom: 10px;
 
 .msgInfo {
     border-radius: 10px;
-    padding: 1;
     padding: 10px;
-
     background: rgba(0, 0, 0, 0.1);
     -webkit-backdrop-filter: saturate(180%) blur(5px);
     backdrop-filter: saturate(180%) blur(5px);
@@ -287,9 +285,15 @@ padding-bottom: 10px;
 }
 
 .nm {
-    font-size: small;
+    font-size: 12px;
+    color: rgba(70, 131, 180, 0.7);
     font-weight:bolder;
-    margin-bottom: 2px;
+    margin-top: 2px;
+    margin-bottom: 5px;
+}
+.greetingNm{
+    color: steelblue;
+    font-weight: bold;
 }
 
 .sendMsg {
