--- a/css/chat_page.css
+++ b/css/chat_page.css
@@ -322,7 +322,9 @@ padding-bottom: 10px;
     font-weight: bold;
     cursor: pointer;
 }
-
+.fblink{
+    color: steelblue;
+}
 .sendMsg {
     bottom: 30px;
     position: fixed;
