--- a/css/chat_page.css
+++ b/css/chat_page.css
@@ -72,6 +72,7 @@ p{
     justify-content: start;
 
 }
+
 .usr{
     align-self: flex-start;
     padding: 10px;
@@ -202,7 +203,7 @@ p{
 .tab {
     border-radius: 10px;
     cursor: pointer;
-    margin: 10px;
+    margin: 8px;
     display: flex;
     align-items: center;
     transition: all 0.4s;
@@ -413,4 +414,6 @@ form {
 
   }
 
-
+.part{
+    margin: 10px  0 0 17px;
+}
