--- a/css/chat_page.css
+++ b/css/chat_page.css
@@ -30,13 +30,14 @@ p{
     border: none;
     margin-right: 15px;
     border-radius: 10px;
+    font-size:30px;
+    color:rgb(224, 224, 224);
     padding: 7px 16px 7px 20px ;
     background: rgba(241, 50, 50, 0.2);
     -webkit-backdrop-filter: saturate(180%) blur(7px);
     backdrop-filter: saturate(180%) blur(7px);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 4px, rgba(0, 0, 0, 0.23) 0px 3px 4px; 
     transition: all 0.4s;
-
 }
 .logoutBtn:hover{
     background: rgba(241, 50, 50, 0.397);
@@ -114,15 +115,15 @@ p{
 .mobile-nav-toggle {
     margin-right: 10px;
     z-index: 3;
-    font-size: 24px;
+    font-size: 20px;
     transition: all 0.4s;
     background: rgba(9, 179, 247, 0.39);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 2px 4px, rgba(0, 0, 0, 0.23) 0px 2px 4px;
     -webkit-backdrop-filter: saturate(180%) blur(7px);
     backdrop-filter: saturate(180%) blur(7px);
     color: #fff;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -136,11 +137,23 @@ p{
 @media (max-width: 786px) {
     .nav {
         left: -300px;
+        top: 103px;
     }
     .msgView{
         margin-left: 20px;
     }
-    
+    .header img{
+        block-size: 80px;
+    } 
+
+    p{
+        font-size: 14px;
+    }
+    .container {
+        height: calc(100vh - 110px);
+        
+    }
+
 
 }
 @media (min-width: 786px) {
@@ -191,8 +204,6 @@ p{
 
 }
 
-
-
 .pName {
     padding: 5px;
     transition: all 0.4s;
@@ -223,7 +234,15 @@ p{
     transition: all 0.4s;
 
 }
+@media (max-width: 786px) {
+    .pPicInner {
+        border-radius: 50%;
+        block-size: 40px;
+        padding: 5px;
+        transition: all 0.4s;
+    }
 
+}
 .topInfo {
     display: flex;
     align-items: center;
@@ -273,25 +292,26 @@ p{
     cursor: pointer;
 
 }
+
 .conversation{
     /* width: calc(100% - 300px); */
 
-height:calc(100% - 150px); 
-overflow:hidden; 
-overflow-y:scroll;
-padding-bottom: 10px;
+    height:calc(100% - 150px); 
+    overflow:hidden; 
+    overflow-y:scroll;
+    padding-bottom: 10px;
 
 }
 .otherMsg {
     display: flex;
     padding-top: 10px;
-    margin-right: 30%;
+    margin-right: 20%;
 }
 
 .myMsg {
     display: flex;
     padding-top: 10px;
-    margin-left: 30%;
+    margin-left: 20%;
     align-self: flex-end;
     flex-direction: row-reverse;
 }
