--- a/css/chat_page.css
+++ b/css/chat_page.css
@@ -91,6 +91,44 @@ p{
     color: steelblue;
 
 }
+.startMsg{
+    margin: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    position:fixed;
+
+
+}
+.center
+{
+    width: 400px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+    padding: 50px;
+    margin-left: 410px;
+    margin-right: 100px;
+    margin-top: -100px;
+
+    background: rgba(116, 183, 245, 0.103);
+    -webkit-backdrop-filter: saturate(180%) blur(7px);
+    backdrop-filter: saturate(180%) blur(7px);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 4px, rgba(0, 0, 0, 0.23) 0px 3px 4px;
+    
+    border-radius: 10px;
+
+    transition: all 0.5s;
+}
+.center p{
+    align-self: center;
+    text-align: center;
+    font-weight: bold;
+}
+
 .container {
     display: flex;
     height: calc(100vh - 130px);
@@ -159,6 +197,10 @@ p{
         height: calc(100vh - 75px);
         
     }
+    .startMsg{
+        visibility: hidden;
+    }
+
 
 
 }
@@ -454,3 +496,5 @@ form {
 .part{
     margin: 10px  0 0 17px;
 }
+
+
