--- a/css/login.css
+++ b/css/login.css
@@ -51,6 +51,8 @@ p{
     .center{
         height: 100%;
         width: 100%;
+        padding: 0;
+        border-radius: 0;
     }
     .info{
         max-width: 280px;
